--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -541,10 +541,12 @@ variable_list = c("intl.mins",  "intl.calls",  "intl.charge",
 
 cor_matrix = cor(churn[, variable_list])
 
-ggcorrplot(cor_matrix, type = "lower", lab = TRUE, lab_size = 2, tl.cex = 8, title = "Visualization of the Correlation Matrix")
+ggcorrplot(cor_matrix, type = "upper", lab = TRUE, lab_size = 2, tl.cex = 8, 
+           colors = c("#6D9EC1", "white", "#E46726"),
+           title = "Visualization of the Correlation Matrix")
 ```
 
-The resulting heatmap highlights two main patterns. First, the *charge variables* (such as `day.charge`, `eve.charge`, and `intl.charge`) are nearly perfectly correlated with their corresponding *minutes variables*. This is expected, as charges are calculated directly from call duration. Including both in a model would add redundancy without new information.
+The resulting heatmap highlights two main patterns. First, the *charge variables* (such as `day.charge`, `eve.charge`, and `intl.charge`) are perfectly correlated with their corresponding *minutes variables*. This is expected, as charges are calculated directly from call duration. Including both in a model would add redundancy without new information.
 
 Second, the *call count variables* (e.g., `day.calls`, `night.calls`) show only weak correlations with their corresponding *minutes variables*. This suggests that call frequency and call duration capture distinct aspects of user behavior and should be considered complementary rather than interchangeable.
 
