--- a/12-Neural-networks.qmd
+++ b/12-Neural-networks.qmd
@@ -505,7 +505,7 @@ We use the `sapply()` function to compute the minimum and maximum values for eac
 
 To visualize the effect of scaling, we compare the distribution of `age` before and after transformation:
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4.5
 #| fig-height: 4
