--- a/13-Clustering.qmd
+++ b/13-Clustering.qmd
@@ -346,7 +346,7 @@ str(cereal_mm)
 
 To visualize the effect of min-max scaling, we compare the distribution of the `sodium` variable before and after scaling:
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4.5
 #| fig-height: 4
