--- a/3-Data-preparation.qmd
+++ b/3-Data-preparation.qmd
@@ -161,10 +161,10 @@ To see this in action, let us apply a boxplot to the `y` variable (diamond width
 #| fig-height: 4
 
 ggplot(data = diamonds) +
-  geom_boxplot(mapping = aes(y = y), color = "darkblue", fill = "#e5f4fb")
+  geom_boxplot(mapping = aes(y = y), color = "#377EB8", fill = "#e5f4fb")
 
 ggplot(data = diamonds) +
-  geom_boxplot(mapping = aes(y = y), color = "darkblue", fill = "#e5f4fb") +
+  geom_boxplot(mapping = aes(y = y), color = "#377EB8", fill = "#e5f4fb") +
   coord_cartesian(ylim = c(0, 15))
 ```
 
@@ -309,8 +309,7 @@ This command replaces each `NA` in the `y` column with a randomly selected value
 
 To assess the effect of imputation visually, the scatter plots below show the relationship between diamond width (`y`) and price before and after imputation:
 
-
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -375,7 +374,7 @@ Min-max scaling is especially useful for algorithms that use distance or gradien
 ::: {#ex-min-max .example}
 To see min-max scaling in action, we apply it to the `carat` variable in the *diamonds* dataset. This variable ranges from approximately `r round(min(diamonds$carat), 1)` to `r round(max(diamonds$carat), 1)`. We use the `minmax()` function from the **liver** package to rescale the values to the $[0, 1]$ interval:
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -383,12 +382,12 @@ To see min-max scaling in action, we apply it to the `carat` variable in the *di
 ggplot(data = diamonds) +
   geom_histogram(mapping = aes(x = carat), bins = 30,
                  color = "white", fill = "#2C7BB6") +
-  ggtitle("Before min-max scaling") 
+  ggtitle("Before Min-Max Scaling") 
 
 ggplot(data = diamonds) +
   geom_histogram(mapping = aes(x = minmax(carat)), bins = 30,
                  color = "white", fill = "#2C7BB6") +
-  ggtitle("After min-max scaling") 
+  ggtitle("After Min-Max Scaling") 
 ```
 
 The left panel shows the raw distribution of carat values, while the right panel displays the scaled version. After transformation, all values fall within the $[0, 1]$ range, making this feature numerically comparable to others. This is particularly important when modeling techniques depend on distance or gradient magnitude.
@@ -411,7 +410,7 @@ Z-score scaling helps place features with different units or magnitudes on a com
 ::: {#ex-zscore .example}
 To illustrate, let us apply z-score scaling to the `carat` variable in the *diamonds* dataset. The mean and standard deviation of `carat` are approximately `r round(mean(diamonds$carat), 2)` and `r round(sd(diamonds$carat), 2)`, respectively. We use the `zscore()` function from the **liver** package:
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -419,12 +418,12 @@ To illustrate, let us apply z-score scaling to the `carat` variable in the *diam
 ggplot(data = diamonds) +
   geom_histogram(mapping = aes(x = carat), bins = 30,
                  color = "white", fill = "#2C7BB6") +
-  ggtitle("Before z-score scaling") 
+  ggtitle("Before Z-Score Scaling") 
 
 ggplot(data = diamonds) +
   geom_histogram(mapping = aes(x = zscore(carat)), bins = 30,
                  color = "white", fill = "#2C7BB6") +
-  ggtitle("After z-score scaling") 
+  ggtitle("After Z-Score Scaling") 
 ```
 
 The left panel shows the original distribution of `carat` values. The right panel displays the z-score scaled version, where the values are centered around 0 and spread in units of standard deviation. While the location and scale are adjusted, the shape of the distribution, including any skewness, remains unchanged.
@@ -696,25 +695,25 @@ From this output, we observe that the minimum value is `r min(adult$capital.loss
 
 To explore this further, we visualize the distribution using both a boxplot and a histogram:
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
 
 ggplot(data = adult, aes(y = capital.loss)) +
-     geom_boxplot(color = "darkblue", fill = "#e5f4fb") +
-     ggtitle("Boxplot of capital.loss")
+     geom_boxplot(color = "#377EB8", fill = "#e5f4fb") +
+     ggtitle("Boxplot of Capital Loss")
 
 ggplot(data = adult, aes(x = capital.loss)) +
      geom_histogram(bins = 30, color = "white", fill = "#2C7BB6") +
-     ggtitle("Histogram of capital.loss")
+     ggtitle("Histogram of Capital Loss")
 ```
 
 The boxplot shows a strong positive skew, with several high values extending beyond the upper whisker. The histogram confirms that most individuals report zero capital loss, with a few concentrated peaks near 2,000 and 4,000.
 
 To focus more closely on the nonzero values, we restrict our analysis to rows where `capital.loss > 0`:
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -722,12 +721,12 @@ To focus more closely on the nonzero values, we restrict our analysis to rows wh
 subset_adult <- subset(adult, capital.loss > 0)
 
 ggplot(data = subset_adult, aes(y = capital.loss)) +
-     geom_boxplot(color = "darkblue", fill = "#e5f4fb") +
-     ggtitle("Boxplot of nonzero capital.loss")
+     geom_boxplot(color = "#377EB8", fill = "#e5f4fb") +
+     ggtitle("Boxplot of Nonzero Capital Loss")
 
 ggplot(data = subset_adult, aes(x = capital.loss)) +
      geom_histogram(bins = 30, color = "white", fill = "#2C7BB6") +
-     ggtitle("Histogram of nonzero capital.loss")
+     ggtitle("Histogram of Nonzero Capital Loss")
 ```
 
 Among those with a nonzero capital loss, the majority of values are concentrated below 500. However, a small number of observations exceed 4,000. Despite their rarity, these high values appear to follow a relatively smooth and symmetric distribution, suggesting they reflect genuine variation in the data rather than data entry errors.
