--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -223,6 +223,7 @@ To load and inspect the dataset, run the following code in R:
 
 ```{r}
 library(liver)
+
 data(churn)
 str(churn)
 ```
@@ -291,7 +292,7 @@ Among the features available in the *churn* dataset, the variable `intl.plan` is
 
 As a binary categorical variable, `intl.plan` allows for a straightforward comparison of churn behavior between customers who do and do not use international services.
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -324,7 +325,7 @@ In the next subsection, we examine whether voice mail subscription shows a simil
 
 We now turn to another service-related feature: the voice mail plan. The variable `voice.plan` indicates whether a customer subscribes to this additional feature. Like the international plan, it may reflect aspects of customer engagement, satisfaction, or perceived value.
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -382,7 +383,7 @@ Because `customer.calls` is a count variable with a small number of discrete val
 
 The bar plot reveals a right-skewed distribution: most customers contact support rarely, while a smaller group makes frequent calls. To explore how this behavior relates to churn, we compare service call frequency across churn outcomes:
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -410,7 +411,7 @@ Do customers who use their phone service more frequently during the day also chu
 
 Because `day.mins` is a continuous numerical variable, we use a box plot to compare distributions across churn outcomes and a density plot to visualize the shape of each distribution. These plots help detect shifts, spread, and overlap between groups. You could also explore this variable with a histogram, which offers another view of distribution—try generating one using `geom_histogram()` as an exercise.
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -421,7 +422,8 @@ ggplot(data = churn) +
   labs(x = "Churn", y = "Daytime Minutes")
 
 ggplot(data = churn) +
-  geom_density(aes(x = day.mins, fill = churn), alpha = 0.3) +
+  geom_density(aes(x = day.mins, fill = churn), alpha = 0.5) +
+  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) +
   labs(x = "Daytime Minutes", y = "Density", fill = "Churn")
 ```
 
@@ -435,7 +437,7 @@ Do customers who make more evening or nighttime calls tend to churn more often? 
 
 Since both variables are continuous, we begin by visualizing `eve.mins` using a violin plot layered with a box plot to show distributional shape and spread, and a density plot to examine the overlap between churners and non-churners:
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -446,7 +448,8 @@ ggplot(data = churn, aes(x = churn, y = eve.mins)) +
   labs(x = "Churn", y = "Evening Minutes")
 
 ggplot(data = churn) +
-  geom_density(aes(x = eve.mins, fill = churn), alpha = 0.3) +
+  geom_density(aes(x = eve.mins, fill = churn), alpha = 0.5) +
+  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) +
   labs(x = "Evening Minutes", y = "Density", fill = "Churn")
 ```
 
@@ -454,7 +457,7 @@ The visualizations suggest a slight shift toward higher evening call usage among
 
 We now apply the same approach to `night.mins`:
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -464,7 +467,8 @@ ggplot(data = churn) +
   labs(x = "Churn", y = "Nighttime Minutes")
 
 ggplot(data = churn) +
-  geom_density(aes(x = night.mins, fill = churn), alpha = 0.3) +
+  geom_density(aes(x = night.mins, fill = churn), alpha = 0.5) +
+  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) +
   labs(x = "Nighttime Minutes", y = "Density", fill = "Churn")
 ```
 
@@ -478,7 +482,7 @@ In a previous section, we observed that customers subscribed to an international
 
 Because `intl.calls` is a discrete numeric variable with moderate range, we examine its distribution by churn status using a box plot and a density plot:
 
-```{r}
+```{r out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -489,7 +493,8 @@ ggplot(data = churn) +
   labs(x = "Churn", y = "International Calls")
 
 ggplot(data = churn) +
-  geom_density(aes(x = intl.calls, fill = churn), alpha = 0.3) +
+  geom_density(aes(x = intl.calls, fill = churn), alpha = 0.5) +
+  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) +
   labs(x = "International Calls", y = "Density", fill = "Churn")
 ```
 
