--- a/5-Statistics.qmd
+++ b/5-Statistics.qmd
@@ -198,7 +198,7 @@ To better understand the logic behind these decisions, consider the analogy of a
 
 ::: {#tbl-hypothesis-errors .table}
 | *Decision*          | *Reality:* $H_0$ is True                               | *Reality:* $H_0$ is False                          |
-|---------------------|--------------------------------------------------------|----------------------------------------------------|
+|----------------|-----------------------------|---------------------------|
 | Do not Reject $H_0$ | *Correct Decision*: Acquit an innocent person.         | *Type II Error (*$\beta$): Acquit a guilty person. |
 | Reject $H_0$        | *Type I Error (*$\alpha$): Convict an innocent person. | *Correct Decision*: Convict a guilty person.       |
 
@@ -217,7 +217,7 @@ Many learners find it challenging to identify which test suits their specific qu
 
 ::: {#tbl-hypothesis-test .table}
 | Test                         | Null Hypothesis ($H_0$)      | Applied To                                     |
-|------------------------------|------------------------------|------------------------------------------------|
+|--------------------|--------------------|--------------------------------|
 | One-sample t-test            | $H_0: \mu = \mu_0$           | Single numerical variable                      |
 | Test for Proportion          | $H_0: \pi = \pi_0$           | Single categorical variable                    |
 | Two-sample t-test            | $H_0: \mu_1 = \mu_2$         | Numerical outcome by binary group              |
@@ -344,17 +344,29 @@ Do customers who churn use international calling services less than those who st
 
 In Chapter [-@sec-ch4-EDA], Section [-@sec-EDA-sec-numeric], we explored the relationship between international calling behavior (`intl.calls`) and churn status using box plots and density plots. These visualizations suggested that churners might make fewer international calls than non-churners. But are these differences statistically meaningful?
 
-```{r echo = FALSE}
+```{r echo = FALSE, out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
 
 ggplot(data = churn) +
   geom_boxplot(aes(x = churn, y = intl.calls), 
-               fill = c("#F4A582", "#A8D5BA"))
+               fill = c("#F4A582", "#A8D5BA")) +
+  labs(
+    #title = "Boxplot of International Calls by Churn",
+    x = "Churn",
+    y = "International Calls"
+  )
 
 ggplot(data = churn) +
-  geom_density(aes(x = intl.calls, fill = churn), alpha = 0.3)
+  geom_density(aes(x = intl.calls, fill = churn), alpha = 0.5) +
+  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) +
+  labs(
+    #title = "Distribution of International Calls by Churn",
+    x = "International Calls",
+    y = "Density",
+    fill = "Churn"
+  )
 ```
 
 The boxplot (left) shows that churners tend to make slightly fewer international calls, and the density plot (right) suggests their distribution is modestly left-shifted. To evaluate whether these differences are statistically significant, we apply the two-sample t-test.
@@ -399,18 +411,30 @@ While the two-sample t-test is used for comparing means of numerical variables, 
 
 In Chapter [-@sec-chapter-EDA-categorical], we explored the relationship between the *Voice Mail Plan* (`voice.plan`) and churn status using bar plots. While the visualizations suggested that churn rates might differ between customers with and without a Voice Mail Plan, hypothesis testing provides a formal framework for evaluating whether this difference is statistically meaningful.
 
-```{r echo = FALSE}
+```{r echo = FALSE, out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
 
 ggplot(data = churn) + 
   geom_bar(aes(x = voice.plan, fill = churn)) +
-  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) 
+  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) +
+  labs(
+    #title = "Customer Churn by Voice Plan",
+    x = "Voice Plan",
+    y = "Number of Customers",
+    fill = "Churn"
+  )
 
 ggplot(data = churn) + 
   geom_bar(aes(x = voice.plan, fill = churn), position = "fill") +
-  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) 
+  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) +
+  labs(
+    #title = "Proportion of Customers Who Churned by Voice Plan",
+    x = "Voice Plan",
+    y = "Proportion",
+    fill = "Churn"
+  ) 
 ```
 
 The left plot shows raw churn counts across Voice Mail Plan categories, while the right plot shows proportional differences. Customers without a Voice Mail Plan appear more likely to churn. To test whether this visual pattern reflects a statistically significant difference, we define the hypotheses:
@@ -458,7 +482,7 @@ To illustrate, we analyze whether marital status is associated with deposit purc
 
 We begin by visualizing the relationship between marital status and deposit subscription using bar plots:
 
-```{r echo = FALSE}
+```{r echo = FALSE, out.width = "100%"}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
@@ -466,12 +490,24 @@ We begin by visualizing the relationship between marital status and deposit subs
 data(bank)
 
 ggplot(data = bank) + 
-    geom_bar(aes(x = marital, fill = deposit)) +
-    scale_fill_manual(values = c("#F4A582", "#A8D5BA")) 
+  geom_bar(aes(x = marital, fill = deposit)) +
+  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) +
+  labs(
+    #title = "Term Deposit Subscription by Marital Status",
+    x = "Marital Status",
+    y = "Number of Clients",
+    fill = "Deposit"
+  )
 
 ggplot(data = bank) + 
-    geom_bar(aes(x = marital, fill = deposit), position = "fill") +
-    scale_fill_manual(values = c("#F4A582", "#A8D5BA")) 
+  geom_bar(aes(x = marital, fill = deposit), position = "fill") +
+  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) +
+  labs(
+    #title = "Proportion of Clients Subscribing by Marital Status",
+    x = "Marital Status",
+    y = "Proportion",
+    fill = "Deposit"
+  ) 
 ```
 
 The first plot shows the raw counts of deposit outcomes across marital categories, while the second plot presents relative proportions. The visuals suggest possible differences in behavior among marital groups, but we need statistical evidence to determine whether these differences are significant.
