--- a/6-Setup-data.qmd
+++ b/6-Setup-data.qmd
@@ -6,7 +6,7 @@ source("_common.R")
 
 Suppose a churn prediction model reports 95% accuracy, yet consistently fails to identify customers who actually churn. What went wrong? In many cases, the issue lies not in the algorithm itself but in how the data was prepared for modeling. Before reliable machine learning models can be built, the dataset must be not only clean but also properly structured to support learning, validation, and generalization.
 
-This chapter focuses on the final preparatory step in the Data Science Workflow introduced in @fig-ch2_DSW: *Step 4: Setting Up Data for Modeling*. This step involves structuring the dataset in a way that enables fair training, reliable testing, and robust model evaluation.
+This chapter focuses on the final preparatory step in the Data Science Workflow introduced in @fig-ch2_DSW: *Step 4: Data Setup to Model*. This step involves structuring the dataset in a way that enables fair training, reliable testing, and robust model evaluation.
 
 To accomplish this, we complete three essential tasks:
 
