--- a/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
+++ b/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
@@ -306,7 +306,7 @@
 \title{Data Science Foundations and Machine Learning with R: From Data
 to Decisions}
 \author{\href{https://www.uva.nl/profile/a.mohammadi}{{Reza Mohammadi}}}
-\date{4 October 2025}
+\date{5 October 2025}
 
 \begin{document}
 \maketitle
@@ -5250,10 +5250,10 @@ To see this in action, let us apply a boxplot to the \texttt{y} variable
 \begin{Shaded}
 \begin{Highlighting}[]
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ diamonds) }\SpecialCharTok{+}
-  \FunctionTok{geom\_boxplot}\NormalTok{(}\AttributeTok{mapping =} \FunctionTok{aes}\NormalTok{(}\AttributeTok{y =}\NormalTok{ y), }\AttributeTok{color =} \StringTok{"darkblue"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#e5f4fb"}\NormalTok{)}
+  \FunctionTok{geom\_boxplot}\NormalTok{(}\AttributeTok{mapping =} \FunctionTok{aes}\NormalTok{(}\AttributeTok{y =}\NormalTok{ y), }\AttributeTok{color =} \StringTok{"\#377EB8"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#e5f4fb"}\NormalTok{)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ diamonds) }\SpecialCharTok{+}
-  \FunctionTok{geom\_boxplot}\NormalTok{(}\AttributeTok{mapping =} \FunctionTok{aes}\NormalTok{(}\AttributeTok{y =}\NormalTok{ y), }\AttributeTok{color =} \StringTok{"darkblue"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#e5f4fb"}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{geom\_boxplot}\NormalTok{(}\AttributeTok{mapping =} \FunctionTok{aes}\NormalTok{(}\AttributeTok{y =}\NormalTok{ y), }\AttributeTok{color =} \StringTok{"\#377EB8"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#e5f4fb"}\NormalTok{) }\SpecialCharTok{+}
   \FunctionTok{coord\_cartesian}\NormalTok{(}\AttributeTok{ylim =} \FunctionTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{15}\NormalTok{))}
 \end{Highlighting}
 \end{Shaded}
@@ -5785,12 +5785,12 @@ approximately 0.2 to 5. We use the \texttt{minmax()} function from the
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ diamonds) }\SpecialCharTok{+}
   \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{mapping =} \FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ carat), }\AttributeTok{bins =} \DecValTok{30}\NormalTok{,}
                  \AttributeTok{color =} \StringTok{"white"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#2C7BB6"}\NormalTok{) }\SpecialCharTok{+}
-  \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Before min{-}max scaling"}\NormalTok{) }
+  \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Before Min{-}Max Scaling"}\NormalTok{) }
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ diamonds) }\SpecialCharTok{+}
   \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{mapping =} \FunctionTok{aes}\NormalTok{(}\AttributeTok{x =} \FunctionTok{minmax}\NormalTok{(carat)), }\AttributeTok{bins =} \DecValTok{30}\NormalTok{,}
                  \AttributeTok{color =} \StringTok{"white"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#2C7BB6"}\NormalTok{) }\SpecialCharTok{+}
-  \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"After min{-}max scaling"}\NormalTok{) }
+  \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"After Min{-}Max Scaling"}\NormalTok{) }
 \end{Highlighting}
 \end{Shaded}
 
@@ -5852,12 +5852,12 @@ the \texttt{zscore()} function from the \textbf{liver} package:
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ diamonds) }\SpecialCharTok{+}
   \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{mapping =} \FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ carat), }\AttributeTok{bins =} \DecValTok{30}\NormalTok{,}
                  \AttributeTok{color =} \StringTok{"white"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#2C7BB6"}\NormalTok{) }\SpecialCharTok{+}
-  \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Before z{-}score scaling"}\NormalTok{) }
+  \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Before Z{-}Score Scaling"}\NormalTok{) }
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ diamonds) }\SpecialCharTok{+}
   \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{mapping =} \FunctionTok{aes}\NormalTok{(}\AttributeTok{x =} \FunctionTok{zscore}\NormalTok{(carat)), }\AttributeTok{bins =} \DecValTok{30}\NormalTok{,}
                  \AttributeTok{color =} \StringTok{"white"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#2C7BB6"}\NormalTok{) }\SpecialCharTok{+}
-  \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"After z{-}score scaling"}\NormalTok{) }
+  \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"After Z{-}Score Scaling"}\NormalTok{) }
 \end{Highlighting}
 \end{Shaded}
 
@@ -6494,12 +6494,12 @@ boxplot and a histogram:
 \begin{Shaded}
 \begin{Highlighting}[]
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ adult, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{y =}\NormalTok{ capital.loss)) }\SpecialCharTok{+}
-     \FunctionTok{geom\_boxplot}\NormalTok{(}\AttributeTok{color =} \StringTok{"darkblue"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#e5f4fb"}\NormalTok{) }\SpecialCharTok{+}
-     \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Boxplot of capital.loss"}\NormalTok{)}
+     \FunctionTok{geom\_boxplot}\NormalTok{(}\AttributeTok{color =} \StringTok{"\#377EB8"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#e5f4fb"}\NormalTok{) }\SpecialCharTok{+}
+     \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Boxplot of Capital Loss"}\NormalTok{)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ adult, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ capital.loss)) }\SpecialCharTok{+}
      \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{bins =} \DecValTok{30}\NormalTok{, }\AttributeTok{color =} \StringTok{"white"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#2C7BB6"}\NormalTok{) }\SpecialCharTok{+}
-     \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Histogram of capital.loss"}\NormalTok{)}
+     \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Histogram of Capital Loss"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -6532,12 +6532,12 @@ rows where \texttt{capital.loss\ \textgreater{}\ 0}:
 \NormalTok{subset\_adult }\OtherTok{\textless{}{-}} \FunctionTok{subset}\NormalTok{(adult, capital.loss }\SpecialCharTok{\textgreater{}} \DecValTok{0}\NormalTok{)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ subset\_adult, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{y =}\NormalTok{ capital.loss)) }\SpecialCharTok{+}
-     \FunctionTok{geom\_boxplot}\NormalTok{(}\AttributeTok{color =} \StringTok{"darkblue"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#e5f4fb"}\NormalTok{) }\SpecialCharTok{+}
-     \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Boxplot of nonzero capital.loss"}\NormalTok{)}
+     \FunctionTok{geom\_boxplot}\NormalTok{(}\AttributeTok{color =} \StringTok{"\#377EB8"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#e5f4fb"}\NormalTok{) }\SpecialCharTok{+}
+     \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Boxplot of Nonzero Capital Loss"}\NormalTok{)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ subset\_adult, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ capital.loss)) }\SpecialCharTok{+}
      \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{bins =} \DecValTok{30}\NormalTok{, }\AttributeTok{color =} \StringTok{"white"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"\#2C7BB6"}\NormalTok{) }\SpecialCharTok{+}
-     \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Histogram of nonzero capital.loss"}\NormalTok{)}
+     \FunctionTok{ggtitle}\NormalTok{(}\StringTok{"Histogram of Nonzero Capital Loss"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -7138,6 +7138,7 @@ To load and inspect the dataset, run the following code in R:
 \begin{Shaded}
 \begin{Highlighting}[]
 \FunctionTok{library}\NormalTok{(liver)}
+
 \FunctionTok{data}\NormalTok{(churn)}
 \FunctionTok{str}\NormalTok{(churn)}
    \StringTok{\textquotesingle{}data.frame\textquotesingle{}}\SpecialCharTok{:}    \DecValTok{5000}\NormalTok{ obs. of  }\DecValTok{20}\NormalTok{ variables}\SpecialCharTok{:}
@@ -7632,7 +7633,8 @@ exercise.
   \FunctionTok{labs}\NormalTok{(}\AttributeTok{x =} \StringTok{"Churn"}\NormalTok{, }\AttributeTok{y =} \StringTok{"Daytime Minutes"}\NormalTok{)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ churn) }\SpecialCharTok{+}
-  \FunctionTok{geom\_density}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ day.mins, }\AttributeTok{fill =}\NormalTok{ churn), }\AttributeTok{alpha =} \FloatTok{0.3}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{geom\_density}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ day.mins, }\AttributeTok{fill =}\NormalTok{ churn), }\AttributeTok{alpha =} \FloatTok{0.5}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{scale\_fill\_manual}\NormalTok{(}\AttributeTok{values =} \FunctionTok{c}\NormalTok{(}\StringTok{"\#F4A582"}\NormalTok{, }\StringTok{"\#A8D5BA"}\NormalTok{)) }\SpecialCharTok{+}
   \FunctionTok{labs}\NormalTok{(}\AttributeTok{x =} \StringTok{"Daytime Minutes"}\NormalTok{, }\AttributeTok{y =} \StringTok{"Density"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"Churn"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
@@ -7691,7 +7693,8 @@ overlap between churners and non-churners:
   \FunctionTok{labs}\NormalTok{(}\AttributeTok{x =} \StringTok{"Churn"}\NormalTok{, }\AttributeTok{y =} \StringTok{"Evening Minutes"}\NormalTok{)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ churn) }\SpecialCharTok{+}
-  \FunctionTok{geom\_density}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ eve.mins, }\AttributeTok{fill =}\NormalTok{ churn), }\AttributeTok{alpha =} \FloatTok{0.3}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{geom\_density}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ eve.mins, }\AttributeTok{fill =}\NormalTok{ churn), }\AttributeTok{alpha =} \FloatTok{0.5}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{scale\_fill\_manual}\NormalTok{(}\AttributeTok{values =} \FunctionTok{c}\NormalTok{(}\StringTok{"\#F4A582"}\NormalTok{, }\StringTok{"\#A8D5BA"}\NormalTok{)) }\SpecialCharTok{+}
   \FunctionTok{labs}\NormalTok{(}\AttributeTok{x =} \StringTok{"Evening Minutes"}\NormalTok{, }\AttributeTok{y =} \StringTok{"Density"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"Churn"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
@@ -7726,7 +7729,8 @@ We now apply the same approach to \texttt{night.mins}:
   \FunctionTok{labs}\NormalTok{(}\AttributeTok{x =} \StringTok{"Churn"}\NormalTok{, }\AttributeTok{y =} \StringTok{"Nighttime Minutes"}\NormalTok{)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ churn) }\SpecialCharTok{+}
-  \FunctionTok{geom\_density}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ night.mins, }\AttributeTok{fill =}\NormalTok{ churn), }\AttributeTok{alpha =} \FloatTok{0.3}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{geom\_density}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ night.mins, }\AttributeTok{fill =}\NormalTok{ churn), }\AttributeTok{alpha =} \FloatTok{0.5}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{scale\_fill\_manual}\NormalTok{(}\AttributeTok{values =} \FunctionTok{c}\NormalTok{(}\StringTok{"\#F4A582"}\NormalTok{, }\StringTok{"\#A8D5BA"}\NormalTok{)) }\SpecialCharTok{+}
   \FunctionTok{labs}\NormalTok{(}\AttributeTok{x =} \StringTok{"Nighttime Minutes"}\NormalTok{, }\AttributeTok{y =} \StringTok{"Density"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"Churn"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
@@ -7781,7 +7785,8 @@ a density plot:
   \FunctionTok{labs}\NormalTok{(}\AttributeTok{x =} \StringTok{"Churn"}\NormalTok{, }\AttributeTok{y =} \StringTok{"International Calls"}\NormalTok{)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ churn) }\SpecialCharTok{+}
-  \FunctionTok{geom\_density}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ intl.calls, }\AttributeTok{fill =}\NormalTok{ churn), }\AttributeTok{alpha =} \FloatTok{0.3}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{geom\_density}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ intl.calls, }\AttributeTok{fill =}\NormalTok{ churn), }\AttributeTok{alpha =} \FloatTok{0.5}\NormalTok{) }\SpecialCharTok{+}
+  \FunctionTok{scale\_fill\_manual}\NormalTok{(}\AttributeTok{values =} \FunctionTok{c}\NormalTok{(}\StringTok{"\#F4A582"}\NormalTok{, }\StringTok{"\#A8D5BA"}\NormalTok{)) }\SpecialCharTok{+}
   \FunctionTok{labs}\NormalTok{(}\AttributeTok{x =} \StringTok{"International Calls"}\NormalTok{, }\AttributeTok{y =} \StringTok{"Density"}\NormalTok{, }\AttributeTok{fill =} \StringTok{"Churn"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
@@ -8804,9 +8809,9 @@ hypothesis testing is subject to two types of error, summarized in
 Table~\ref{tbl-hypothesis-errors}.
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.1628}}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.4341}}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.4031}}@{}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.2222}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.4028}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.3750}}@{}}
 \caption{Possible outcomes of hypothesis testing, with two correct
 decisions and two types of
 error.}\label{tbl-hypothesis-errors}\tabularnewline
@@ -10171,9 +10176,9 @@ be built, the dataset must be not only clean but also properly
 structured to support learning, validation, and generalization.
 
 This chapter focuses on the final preparatory step in the Data Science
-Workflow introduced in Figure~\ref{fig-ch2_DSW}: \emph{Step 4: Setting
-Up Data for Modeling}. This step involves structuring the dataset in a
-way that enables fair training, reliable testing, and robust model
+Workflow introduced in Figure~\ref{fig-ch2_DSW}: \emph{Step 4: Data
+Setup to Model}. This step involves structuring the dataset in a way
+that enables fair training, reliable testing, and robust model
 evaluation.
 
 To accomplish this, we complete three essential tasks:
