--- a/9-Naive-Bayes.qmd
+++ b/9-Naive-Bayes.qmd
@@ -58,16 +58,16 @@ P(A|B) = \frac{P(A \cap B)}{P(B)}
 ```
 Where:
 
--   $P(A|B)$ is the *posterior probability*, the probability of event $A$ (the hypothesis) given that event $B$ (the evidence) has occurred.
+-   $P(A|B)$ is the posterior probability, the probability of event $A$ (the hypothesis) given that event $B$ (the evidence) has occurred.
 
--   $P(A \cap B)$ is the *joint probability* that both events $A$ and $B$ occur.
+-   $P(A \cap B)$ is the joint probability that both events $A$ and $B$ occur.
 
--   $P(B)$ is the *marginal probability* or *evidence*, quantifying the total probability of observing event $B$ across all possible outcomes.
+-   $P(B)$ is the marginal probability or evidence, quantifying the total probability of observing event $B$ across all possible outcomes.
 
-To better understand these components, Figure [-@fig-venn-diagram] offers a visual interpretation using a Venn diagram. The overlapping region of the two circles illustrates the joint probability $P(A \cap B)$, while the entire area of circle $B$ represents $P(B)$.
+To clarify the components of Bayes’ Theorem, Figure [-@fig-venn-diagram] provides a visual interpretation using a Venn diagram. The overlapping region between the circle and the octagon represents the joint probability $P(A \cap B)$, while the entire area of the octagon corresponds to the marginal probability $P(A)$, and the entire area of the circle corresponds to $P(B)$.
 
-```{r fig-venn-diagram, echo = FALSE, out.width = "40%", fig.cap = "Venn diagram illustrating the joint and marginal probabilities in Bayes’ Theorem."}
-knitr::include_graphics("images/ch9_Venn-diagram.png")
+```{r fig-venn-diagram, echo = FALSE, out.width = "70%", fig.cap = "The Venn diagram (top) visualizes the joint and marginal probabilities in Bayes’ Theorem. The corresponding probabilities are also expressed in the formula shown below."}
+knitr::include_graphics("images/ch9_Venn-diagram_probabilities.png")
 ```
 
 The expression for Bayes’ Theorem can also be derived by applying the definition of conditional probability. Specifically, $P(A \cap B)$ can be written as $P(A) \times P(B|A)$, leading to an alternative form:
