--- a/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
+++ b/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
@@ -14001,22 +14001,25 @@ Where:
   possible outcomes.
 \end{itemize}
 
-To better understand these components, Figure \ref{fig-venn-diagram}
-offers a visual interpretation using a Venn diagram. The overlapping
-region of the two circles illustrates the joint probability
-\(P(A \cap B)\), while the entire area of circle \(B\) represents
+To clarify the components of Bayes' Theorem, Figure
+\ref{fig-venn-diagram} provides a visual interpretation using a Venn
+diagram. The overlapping region between the circle and the octagon
+represents the \emph{joint probability} \(P(A \cap B)\), while the
+entire area of the octagon corresponds to the \emph{marginal
+probability} \(P(A)\), and the entire area of the circle corresponds to
 \(P(B)\).
 
 \begin{figure}[H]
 
 \centering{
 
-\includegraphics[width=0.4\linewidth,height=\textheight,keepaspectratio]{images/ch9_Venn-diagram.png}
+\includegraphics[width=0.7\linewidth,height=\textheight,keepaspectratio]{images/ch9_Venn-diagram_probabilities.png}
 
 }
 
-\caption{\label{fig-venn-diagram}Venn diagram illustrating the joint and
-marginal probabilities in Bayes' Theorem.}
+\caption{\label{fig-venn-diagram}The Venn diagram (top) visualizes the
+joint and marginal probabilities in Bayes' Theorem. The corresponding
+probabilities are also expressed in the formula shown below.}
 
 \end{figure}%
 
